Fixes and improvements.
- Added section-background CSS variable to common.css for when more content is eventually added to landing page.
- Changed section background color so it doesn't look like a button.
- Fixed margin issues in downloads page by introducing new IDs to some HTML elements.
- Removed scrollbar buttons from taking empty space by setting it to display: none
- Reduced scrollbar track's border radius to 0 so it doesn't have black corners on top and bottom.
- Increase logo brightness in dark mode.
- Increased content width in landing page.
- Aligned hero content to a grid so its in line with the rest of the page content.
- Feature text now uses 100% width of its container and is also in line with page content.
- Hero background image now uses 100% viewport width.

--- a/assets/common.css
+++ b/assets/common.css
@@ -1,6 +1,7 @@
 :root {
   --body-color: hsl(0deg, 100%, 100%);
-  --accent-background: hsl(222deg, 100%, 98%);
+  --accent-background: hsl(222, 100%, 98%);
+  --section-background: hsla(209, 78%, 48%, 0.4);
   --accent-light: hsl(222deg, 100%, 95%);
   --accent-normal: hsl(222deg, 100%, 90%);
   --accent-dark: hsl(226deg 100% 85%);
@@ -20,7 +21,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 14px;
 }
 
 #toc::-webkit-scrollbar {
@@ -29,11 +30,10 @@
 
 ::-webkit-scrollbar-track {
   background: var(--accent-light);
-  border-radius: 20px;
 }
 
 ::-webkit-scrollbar-button {
-  visibility: hidden;
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb {
