--- a/assets/downloads.css
+++ b/assets/downloads.css
@@ -32,7 +32,11 @@ img {
   margin-bottom: 10px;
 }
 
-.card__right {
+#lawnchair_title {
+  padding-top: 10px;
+}
+
+#card_main_cta {
   padding-top: 10px;
 }
 
@@ -40,7 +44,6 @@ img {
   font-size: 1.1em;
   margin: 0;
   font-weight: 600;
-  padding-top: 10px;
 }
 
 .card__right a {
